# ambrocio-cranial-implants

./: README.md  pyproject.toml  requirements.txt
cranalyzer/: file_importer.py  geometry_processor.py  visualizer.py
deprecated/: turku_database_export.py  workflow_test.py
docs/: index.html  index_main.html
docs/css/: style.css
examples/: margin_calibration.py  plotting.py  preparation.py  ray_casting.py
exports/: hits.csv  reference_skull_prepared.stl  reference_skull_prepared_smoothing.stl
src/: RhinoFileImporter.py  file_importer.py  geometry_processor.py  plot_heatmap.py  projection.py  turku_database_export.py  visualization.py  workflow_test.py
standard_skull/: Standard_Skull_A0035_topOnly_flattened_smoothed.stl
